force-app/main/default/objects/BGBL__Query__c/fields/BGBL__LIMIT_Filter__c.field-meta.xml
<CustomField>
    <fullName>BGBL__LIMIT_Filter__c</fullName>
    <inlineHelpText>Limit the maximum number of results returned  eg. 100</inlineHelpText>
    <label>LIMIT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>