force-app/main/default/objects/BGBL__Query__c/fields/BGBL__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Object_Name__c</fullName>
    <inlineHelpText>Full API Object Name eg. MUSW__Permit__c</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>