force-app/main/default/objects/BGBL__Query__c/fields/BGBL__ORDER_BY_Filter__c.field-meta.xml
<CustomField>
    <fullName>BGBL__ORDER_BY_Filter__c</fullName>
    <inlineHelpText>Use to return query results in a particular order eg. CloseDate, CreatedDate</inlineHelpText>
    <label>ORDER BY Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>