force-app/main/default/objects/BGBL__Query__c/fields/BGBL__Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Tracking_Number__c</fullName>
    <externalId>true</externalId>
    <label>Query No.</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>