force-app/main/default/objects/BGBL__Query__c/validationRules/BGBL__Fields_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBL__Fields_Required</fullName>
    <active>true</active>
    <errorConditionFormula>BGBL__Object_Fields__c = &quot;&quot;</errorConditionFormula>
    <errorDisplayField>BGBL__Object_Fields__c</errorDisplayField>
    <errorMessage>You must specify which fields you want the query to return for merging.</errorMessage>
</ValidationRule>