force-app/main/default/objects/BGBL__Query__c/listViews/BGBL__All.listView-meta.xml
<ListView>
    <fullName>BGBL__All</fullName>
    <columns>NAME</columns>
    <columns>BGBL__Object_Name__c</columns>
    <columns>BGBL__WHERE_Filter__c</columns>
    <columns>BGBL__LIMIT_Filter__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>